--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,160 @@ html {
 
 *, *:before, *:after {
   box-sizing: inherit; /* inherit allows for easy creation of a new box model context further down the tree */
+
 }
 
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; /* smoother rendering of fonts */
+}
+
+/*****************************
+  CONTENT SETUP
+*****************************/
+
+nav {
+  display: flex;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.logo {
+  width: 15%;
+  display: inline-flex;
+  justify-content: center;
+}
+
+.logo a {
+  padding-top: 30px;
+  color: rgb(17,17,17);
+  font-size: 1.8em;
+  letter-spacing: .1em;
+  text-decoration: none;
+}
+
+nav ul {
+  display: inline-flex;
+  width: 70%;
+  padding-top: 25px;
+  justify-content: center;
+}
+
+nav ul li {
+  padding: 15px;
+  font-size: .8em;
+  
+}
+
+nav ul li a {
+  color: rgba(136,136,136);
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+}
+
+.button {
+  width: 15%;
+  display: inline-flex;
+  justify-content: center;
+  padding-top: 30px;
+}
+
+input[type=button] {
+  width: 125px;
+  height: 27px;
+  border-radius: 15px;
+  font-size: .75em;
+  text-transform: uppercase;
+  background-color: white;
+  color: rgb(17,17,17);
+  border: 1px solid rgb(136,136,136);
+  letter-spacing: .1em;
+  cursor: pointer;
+}
+
+main {
+  width: inherit;
+  display: flex;
+}
+
+.left,
+.right {
+  display: inherit;
+  flex: 1 0 50%;
+}
+.left {
+  flex-direction: column;
+  padding: 140px 0 0 80px;
+}
+.left h1,
+.left div {
+  font-family: 'Montserrat', sans-serif;
+}
+.left h1 {
+  font-size: 3.2em;
+  color: rgb(17, 17, 17);
+  padding-left: 23px;
+}
+.left p {
+  font: 1.1em/2em 'Open Sans', sans-serif;
+  color: rgb(136,136,136);
+  margin: 30px 0 50px 30px;
+  text-align: justify;
+}
+.left div {
+  display: inherit;
+  text-transform: uppercase;
+  color: rgb(17, 17, 17);
+}
+.left hr {
+  width: 30px;
+  border: 2px solid rgb(17, 17, 17);
+}
+.exploring {
+  height: 210px;
+  margin-left: 30px;
+}
+.exploring hr {
+  position: relative;
+  top: -98px;
+  right: -15px;
+  margin: auto 20px auto 0;
+}
+.scroll {
+  transform: rotate(270deg);
+  width: 120px;
+  position: relative;
+  bottom: 55px;
+  right: 90px;
+  font-size: .8em;
+}
+.scroll hr {
+  margin: auto 20px auto 0;
+}
+
+.third-shadow {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,116,110,0.25);
+  clip-path: circle(63% at 70% 71%);
+}
+.second-shadow {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,116,110,0.65);
+  clip-path: circle(58% at 70% 71%);
+}
+.first-shadow {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,116,110,1);
+  clip-path: circle(53% at 70% 71%);
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  background: url('../images/nighttime.jpg') no-repeat 0px 70px;
+  background-size: 100%;
+  clip-path: circle(48% at 70% 71%);
 }
